--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -120,21 +120,20 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.16</version>
         </dependency>
         <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>${flywaydb.version}</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.flywaydb</groupId>-->
-        <!--<artifactId>flyway-parent</artifactId>-->
-        <!--<version>5.1.3</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -224,18 +223,6 @@
                     </includes>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>org.flywaydb</groupId>-->
-            <!--<artifactId>flyway-maven-plugin</artifactId>-->
-            <!--&lt;!&ndash;<version>5.1.3</version>&ndash;&gt;-->
-            <!--<dependencies>-->
-            <!--<dependency>-->
-            <!--<groupId>mysql</groupId>-->
-            <!--<artifactId>mysql-connector-java</artifactId>-->
-            <!--<version>8.0.11</version>-->
-            <!--</dependency>-->
-            <!--</dependencies>-->
-            <!--</plugin>-->
 
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
