--- a/client-display/package.json
+++ b/client-display/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.8.2",
+    "@skills/skills-client-configuration": "0.0.7",
     "animate.css": "3.7.0",
     "apexcharts": "3.6.10",
     "axios": "0.18.0",
     "axios-auth-refresh": "1.0.6",
     "bootstrap": "4.3.1",
-    "material-icons": "0.3.1",
     "lodash": "4.17.11",
     "marked": "0.6.2",
+    "material-icons": "0.3.1",
     "numeral": "2.0.6",
     "postmate": "1.5.0",
     "q": "1.5.1",
