--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -44,6 +44,10 @@ skills:
       descriptionMaxLength: 2000
       maxTimeWindowInMinutes: 43200
       docsHost: http://skillsasaservicedocs.com
+      maxProjectsPerAdmin: 25
+      maxSubjectsPerProject: 25
+      maxBadgesPerProject: 25
+      maxSkillsPerSubject: 100
   profiles:
     active: default
 #logging:
