--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@ stages:
   - deploy
 
 build:
+  except:
+    - schedules
   image: maven:3.6.0-jdk-11
   stage: build
   script:
@@ -15,7 +17,26 @@ build:
     paths:
       - backend/target/backend-*.jar
 
+postgres-test:on-schedule:
+  only:
+    - schedules
+  image: maven:3.6.0-jdk-11
+  stage: build
+  services:
+    - postgres:latest
+  variables:
+    POSTGRES_PASSWORD: skillsPassword
+    POSTGRES_DB: skills
+  script:
+    - echo "@skills:registry=http://$NEXUS_SERVER/repository/skills-registry/" > ~/.npmrc
+    - cat ~/.npmrc
+    - echo "<settings><mirrors><mirror><id>central</id><name>central</name><url>http://$NEXUS_SERVER/repository/maven-public/</url><mirrorOf>*</mirrorOf></mirror></mirrors></settings>" > ~/.m2/settings.xml
+    - cat ~/.m2/settings.xml
+    - mvn test -Dspring.datasource.url=jdbc:postgresql://postgres:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
+
 deploy:
+  except:
+    - schedules
   image: alpine:latest
   stage: deploy
   before_script:
