--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -36,6 +36,12 @@
             <version>1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+
         <!-- need to explicitly include jaxb deps when using jdk >= 9 -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
