--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -4,3 +4,15 @@ skills.config.ui.paragraphValidationRegex=^(?i)(?s)((?!jabberwocky).)*$
 skills.config.ui.paragraphValidationMessage=paragraphs may not contain jabberwocky
 skills.config.ui.nameValidationRegex=^(?i)((?!jabberwocky).)*$
 skills.config.ui.nameValidationMessage=names may  not contain jabberwocky
+
+
+# Uncomment to run against local instance of Postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/skills
+#spring.datasource.username=postgres
+#spring.datasource.password=skillspass
+
+# Uncomment to show SQL
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate: INFO
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
