--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,51 +12,49 @@
   },
   "dependencies": {
     "@skills/skills-client-vue": "0.0.47",
-    "@fortawesome/fontawesome-free": "5.8.2",
-    "animate.css": "3.7.0",
-    "apexcharts": "3.6.10",
-    "axios": "0.18.0",
+    "@fortawesome/fontawesome-free": "5.11.2",
+    "animate.css": "3.7.2",
+    "apexcharts": "3.8.6",
+    "axios": "0.19.0",
     "babel-polyfill": "6.26.0",
     "bootstrap": "4.3.1",
-    "bootstrap-vue": "2.0.0-rc.19",
+    "bootstrap-vue": "2.0.2",
     "enquire.js": "2.1.6",
     "font-awesome-picker": "2.0.0",
     "lodash.debounce": "4.0.8",
-    "marked": "0.6.2",
+    "marked": "0.7.0",
     "matchmedia-polyfill": "0.3.2",
     "material-icons": "0.3.1",
     "moment": "2.24.0",
     "numeral": "2.0.6",
-    "postmate": "1.5.0",
-    "vee-validate": "2.2.11",
+    "vee-validate": "2.2.15",
     "vis": "4.21.0",
     "vue": "2.6.10",
-    "vue-apexcharts": "1.3.5",
-    "vue-friendly-iframe": "0.12.0",
+    "vue-apexcharts": "1.5.0",
     "vue-multiselect": "2.1.6",
-    "vue-router": "3.0.6",
-    "vue-scrollto": "2.15.0",
+    "vue-router": "3.1.3",
+    "vue-scrollto": "2.17.1",
     "vue-tables-2": "1.4.70",
-    "vue-virtual-scroll-list": "1.3.7",
-    "vuejs-datepicker": "1.5.4",
+    "vue-virtual-scroll-list": "1.4.2",
+    "vuejs-datepicker": "1.6.2",
     "vuex": "3.1.1",
-    "dompurify": "2.0.0"
+    "dompurify": "2.0.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.7.0",
-    "@vue/cli-plugin-e2e-nightwatch": "3.7.0",
-    "@vue/cli-plugin-eslint": "3.7.0",
-    "@vue/cli-plugin-unit-jest": "3.7.0",
-    "@vue/cli-service": "3.7.0",
-    "@vue/eslint-config-airbnb": "4.0.0",
+    "@vue/cli-plugin-babel": "3.11.0",
+    "@vue/cli-plugin-e2e-nightwatch": "3.11.0",
+    "@vue/cli-plugin-eslint": "3.11.0",
+    "@vue/cli-plugin-unit-jest": "3.11.0",
+    "@vue/cli-service": "3.11.0",
+    "@vue/eslint-config-airbnb": "4.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "24.8.0",
-    "eslint": "5.16.0",
-    "eslint-plugin-vue": "5.2.2",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "24.9.0",
+    "eslint": "6.5.0",
+    "eslint-plugin-vue": "5.2.3",
     "node-sass": "4.12.0",
-    "sass-loader": "7.1.0",
+    "sass-loader": "8.0.0",
     "vue-template-compiler": "2.6.10"
   }
 }
