--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <node.version>v11.6.0</node.version>
 
         <httpclient.version>4.5.6</httpclient.version>
+        <guava.version>28.1-jre</guava.version>
     </properties>
 
     <parent>
