--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -68,6 +68,7 @@
     "moment-timezone": "0.5.31",
     "node-sass": "4.14.1",
     "sass-loader": "10.0.3",
+    "vue-cli-plugin-webpack-bundle-analyzer": "~2.0.0",
     "vue-template-compiler": "2.6.12"
   }
 }
