--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -33,7 +33,7 @@
     "marked": "1.2.0",
     "matchmedia-polyfill": "0.3.2",
     "material-icons": "0.3.1",
-    "moment": "2.29.1",
+    "dayjs": "1.9.6",
     "node-emoji": "1.10.0",
     "numeral": "2.0.6",
     "sockjs-client": "1.5.0",
