--- a/client-display/package.json
+++ b/client-display/package.json
@@ -24,6 +24,7 @@
     "axios": "0.20.0",
     "axios-auth-refresh": "3.0.0",
     "bootstrap": "4.5.2",
+    "dayjs": "1.9.6",
     "dompurify": "2.0.15",
     "lodash": "4.17.20",
     "marked": "1.1.1",
@@ -38,7 +39,6 @@
     "vue": "2.6.12",
     "vue-apexcharts": "1.6.0",
     "vue-js-toggle-button": "1.3.3",
-    "vue-moment": "4.1.0",
     "vue-radial-progress": "0.3.2",
     "vue-router": "3.4.3",
     "vue-simple-progress": "1.1.1",
@@ -59,7 +59,6 @@
     "eslint-plugin-vue": "6.2.2",
     "license-check-and-add": "3.0.4",
     "license-checker": "25.0.1",
-    "moment-timezone": "0.5.31",
     "node-sass": "4.14.1",
     "sass-loader": "10.0.2",
     "vue-template-compiler": "2.6.12"
