--- a/client-display/package.json
+++ b/client-display/package.json
@@ -30,7 +30,7 @@
     "marked": "1.1.1",
     "material-icons": "0.3.1",
     "node-emoji": "1.10.0",
-    "numeral": "2.0.6",
+    "number-format.js": "2.0.9",
     "postmate": "1.5.2",
     "q": "1.5.1",
     "tinycolor2": "1.4.1",
